Modified the App and made it more minimalistic.At this point the is a bug however, when you minimize the window vertically the componets shift.

--- a/src/index.css
+++ b/src/index.css
@@ -1,60 +1,30 @@
-.FirstPage {
-  overflow: hidden;
-  background-image: url("/src/assets/SVGs/background\ vector2.svg");
-  background-repeat: no-repeat;
-  background-position: top left;
-  background-size: cover;
-  background-attachment: scroll;
+body{
+    margin:4em;
+    padding:0;
+    box-sizing:border-box;
+    font-family : sans-serif;
+    color:white;
+    overflow:hidden;
+    background:url("./assets/SVGs/background\ vector2.svg");
+    background-repeat:no-repeat;
+    background-size:cover;
+    background-attachment:scroll;
 }
 
-body {
-  height: 100vh;
-  overflow: hidden;
+.container{
+    scroll-snap-type: y mandatory;
+    overflow-y:scroll;
+    height:100vh;
+    overflow:hidden;
+  }
+
+section{
+    
+    height:100vh;
+    display:grid;
+    justify-items:center;
+    scroll-snap-align:start;
+    
+    
 }
 
-main {
-  scroll-snap-type: y mandatory;
-  overflow-y: scroll;
-  height: 100vh;
-  overflow: hidden;
-}
-section {
-  display: grid;
-  grid-template-columns: auto;
-  align-items: center;
-  height: 100vh;
-  scroll-snap-align: start;
-}
-
-/*start of First Page from the top */
-.brand-logo {
-  display: flex;
-  margin: 2.5em;
-  justify-content: center;
-}
-.center-image {
-  display: flex;
-  justify-content: center;
-  margin: 6.5em;
-  flex-grow: 0;
-}
-.cursor {
-  display: flex;
-  justify-content: center;
-  margin-top: 2.5em;
-}
-
-/* End of First Page */
-
-/* start of second Page */
-
-.mini-logo {
-  margin-left: 5em;
-  margin-top: -25em;
-}
-
-.topCursor {
-  display: flex;
-  justify-content: center;
-  margin-top: -119.5em;
-}
